some older commits

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1 class="app-title centered">Content</h1>
-<!-- existing content -->
+<div class="content-container">
+  <h1 class="app-title centered">Content</h1>
+  <!-- existing content -->
+</div>
