--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,15 @@
+.content-container {
+  min-height: 100%;
+}
+
 .centered {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
 
+.app-title {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding: 12px;
+}
