--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,9 @@
 .content-container {
   min-height: 100%;
 }
-
+.inner-container {
+  padding-bottom: 36px;
+}
 .centered {
   margin-left: auto;
   margin-right: auto;
@@ -12,4 +14,18 @@
   margin-bottom: 0;
   margin-top: 0;
   padding: 12px;
+}
+
+.footer-container {
+  height: 24px;
+  margin-top: -36px;
+}
+
+.footer-content {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.lorem-paragraphs {
+  text-align: justify;
 }
