--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1 class="app-title centered">Content</h1>
-<!-- existing content -->
+<div class="content-outer-container">
+  <div class="content-inner-container">
+    <h1 class="app-title centered">Content</h1>
+    <!-- existing content -->
+  </div>
+</div>
