--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,19 @@
+.content-outer-container {
+  min-height: 100%;
+}
+
+.content-inner-container {
+  padding-bottom: 36px;
+}
+
 .centered {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+}
+
+.app-title {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding: 12px;
 }
