--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,6 @@
     <!-- existing content -->
   </div>
 </div>
+<div class="footer-container">
+  <p class="footer-content">Cam Dziurgot &copy; 2021</p>
+</div>
